# bevy_fighter

./: Cargo.toml  README.md  WriteUp.txt
assets/fighters/: punch.ase
src/: args.rs  input.rs  main.rs
