[package]
name = "bevy_fighter"
version = "0.1.0"
edition = "2021"
authors = ["Tyler Babbel"]
license = "MIT"

[dependencies]
bevy = "0.11"
bevy_xpbd_2d = { git = "https://github.com/jondolf/bevy_xpbd", features = ["enhanced-determinism"] }
bevy_matchbox = { version = "0.7", features = ["ggrs"] }
bevy_ggrs = "0.13"
bevy-inspector-egui = "0.19"
bytemuck = { version = "1.7", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
serde = "1"

# make glam operations deterministic
# see: https://github.com/bitshifter/glam-rs/discussions/388
glam = { version = "0.24", features = ["libm"] }

serde_qs = "0.12"
bevy_aseprite = "0.11.0"
# wasm-bindgen = "0.2"

[profile.dev]
opt-level = 2 # Use slightly better optimization, so examples work

[patch.crates-io]
bevy_ggrs = { git = "https://github.com/bushrat011899/bevy_ggrs", branch = "PerTypeSnapshotting" }

[patch."https://github.com/jondolf/bevy_xpbd"]
bevy_xpbd_2d = { git = "https://github.com/johanhelsing/bevy_xpbd_jondolf", branch = "map-entities" }
